--- a/snake-game-cards/package.json
+++ b/snake-game-cards/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snake-game-cards",
+  "name": "snakegamecards",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
